# AstrOS

./: .gitignore  API_SETUP.md  CLEANUP_SUMMARY.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING_API.md  DEVELOPMENT_PLAN.md  GETTING_STARTED.md  Makefile  PROJECT_STATUS_CLEAN.md  README.md  ROADMAP.md  SECURITY.md  astros-gui  astros.py  astros_daemon.py  build-package.sh  debug_nlp.py  demo_enhanced.py  demo_stage2.py  fix-gui.sh  health-check.sh  install-agent.sh  pull_request_template.md  pyproject.toml  requirements.txt  run-agent.sh  setup-gui-dependencies.sh  setup-venv.sh  setup.py  status_dashboard.py  test-agent.py  test-gui.sh  test-package.sh  test_api.py  test_comprehensive.py  test_conversation.py  test_simple.py  test_stage1.py  validate_env.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation.md  feature_request.md  plugin_request.md
.github/workflows/: ci.yml
Iso/: Dockerfile
Local/: 01-development-process-guide.md  02-ubuntu-iso-customization.md  03-ai-integration-architecture.md  04-open-source-maintenance.md  05-development-environment-setup.md  README.md  Stage1-Implementation-Guide.md  Stage2-Implementation-Roadmap.md  Stage2-Preview.md
configs/: agent.env.template  astros-agent.service
docs/: API_SETUP.md  CHANGELOG.md  CLI_CHAT_GUIDE.md  COMPLETE_MANAGEMENT_GUIDE.md  COMPLETION_SUMMARY.md  ENV_IMPLEMENTATION_SUMMARY.md  ENV_SETUP.md  GUI_LAUNCH_SUCCESS.md  GUI_QUICK_FIX.md  GUI_USER_GUIDE.md  GUI_WEEK9_DAY1_COMPLETE.md  INSTALLATION_GUIDE.md  PRODUCTION_SUCCESS_REPORT.md  QUICK_REFERENCE.md  README.md  WHATS_NEXT.md  architecture.md  development.md  plugin-development.md  troubleshooting.md
docs/DevDoc/: DAY_32_COMPLETE.md  DEVELOPMENT_GUIDE.md  DOCUMENTATION_SUMMARY.md  FINAL_REPORT_WEEK_5-8.md  GUI_PHASE_1_COMPLETE.md  QUICK_START.md  README.md  SERVICE_INSTALLATION_COMPLETE.md  STAGE_0_CHECKLIST.md  STAGE_0_FOUNDATION.md  STAGE_1_DESKTOP_PLUGINS.md  TEST_REPORT_COMPLETE.md  WEEK_3-4_PROGRESS.md  WEEK_5-8_PROGRESS.md  WEEK_9-12_DESKTOP_INTEGRATION.md
docs/api/: README.md  core.md
docs/community/: conflict-resolution.md  inclusive-communication.md
gui/: __init__.py  app.py  chat_window.py  tray.py
gui/resources/: astros.desktop
scripts/: create-plugin.sh
src/astros/: __init__.py  cli.py
src/astros/ai/: __init__.py  nlp.py  nlp_engine.py  openai_client.py  response_customizer.py  voice_processor.py
src/astros/core/: __init__.py  agent.py  config_enhanced.py  context_manager.py  error_handler.py
src/astros/plugins/: __init__.py  base.py  voice.py
src/astros/system/: __init__.py  integration.py
tests/unit/: test_agent.py  test_ai_components.py
